tests/snapshots/examples_fixtures/diagnostics__errors__ModuleInvalidContentError.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics/errors/ModuleInvalidContentError.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `Errors.ModuleInvalidContentError` doesn't match file path `examples/diagnostics/errors/ModuleInvalidContentError.flx`.

  examples/diagnostics/errors/ModuleInvalidContentError.flx:2:1
  |
2 | module Errors.ModuleInvalidContentError {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
