tests/snapshots/examples_fixtures/diagnostics__errors__ModuleMultipleModulesError.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics/errors/ModuleMultipleModulesError.flx
== compile ==
failed (module)
== diagnostics ==
error[E023]: Multiple Modules

File contains multiple module declarations.

  examples/diagnostics/errors/ModuleMultipleModulesError.flx:0:1
  |

Hint:
  Each file should contain only one module declaration.
== stdout ==
<not executed>
