tests/snapshots/examples_fixtures/diagnostics__errors__ScriptOnly.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics/errors/ScriptOnly.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
