tests/snapshots/examples_fixtures/diagnostics__errors__empty_match_error.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics/errors/empty_match_error.flx
== compile ==
failed (compile)
== diagnostics ==
error[E430]: Could Not Infer Concrete Type

Could not determine a concrete type for `x` at the public function signature. Inferred type: `_`.

  examples/diagnostics/errors/empty_match_error.flx:2:1
  |
2 | let x = match 1 { };
  | ^^^^^^^^^^^^^^^^^^^^

Hint:
  Add a type annotation: e.g. `fn x(x: Int, y: Int): Int`


error[E014]: Empty Match

Match expression must have at least one arm.

  examples/diagnostics/errors/empty_match_error.flx:2:9
  |
2 | let x = match 1 { };
  |         ^^^^^^^^^^^

Hint:
  Add at least one pattern match arm: match value { pattern -> expr; }


error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: Console).

  examples/diagnostics/errors/empty_match_error.flx:3:1
  |
3 | print(x);
  | ^^^^^^^^^
  | --------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E414]: Missing Main Function

Effectful program is missing `fn main` root effect handler.

  examples/diagnostics/errors/empty_match_error.flx:3:1
  |
3 | print(x);
  | ^^^^^^^^^
  | --------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.

Found 4 errors.
== stdout ==
<not executed>
